fixed code error

--- a/sass/zengrid.scss
+++ b/sass/zengrid.scss
@@ -70,7 +70,7 @@ $DEBUG: False; // on/off visual debugs
         content:"";
         display: table ;
         clear:both;
-        posiiton: relative;
+        position: relative;
     }
 
     // Breakpoints
