--- a/css/zengrill.css
+++ b/css/zengrill.css
@@ -1,8 +1,12 @@
 .center { text-align: center; }
 
+.childCenter > * { text-align: center; }
+
 * { box-sizing: border-box; }
 
-.row:before, .row:after { content: ""; display: table; clear: both; position: relative; }
+body { margin: 0; }
+
+.row:before, .row:after { content: ""; display: table; clear: both; posiiton: relative; }
 
 @media (min-width: 0px) { .w1, .w1C, .w1C\$, .\(5\%\), .\(5\%\)C, .\(5\%\)C\$, .\(5\%\)\$, .\(10\%\), .\(10\%\)C, .\(10\%\)C\$, .\(10\%\)\$, .\(15\%\), .\(15\%\)C, .\(15\%\)C\$, .\(15\%\)\$, .\(20\%\), .\(20\%\)C, .\(20\%\)C\$, .\(20\%\)\$, .\(25\%\), .\(25\%\)C, .\(25\%\)C\$, .\(25\%\)\$, .\(30\%\), .\(30\%\)C, .\(30\%\)C\$, .\(30\%\)\$, .\(35\%\), .\(35\%\)C, .\(35\%\)C\$, .\(35\%\)\$, .\(40\%\), .\(40\%\)C, .\(40\%\)C\$, .\(40\%\)\$, .\(45\%\), .\(45\%\)C, .\(45\%\)C\$, .\(45\%\)\$, .\(50\%\), .\(50\%\)C, .\(50\%\)C\$, .\(50\%\)\$, .\(55\%\), .\(55\%\)C, .\(55\%\)C\$, .\(55\%\)\$, .\(60\%\), .\(60\%\)C, .\(60\%\)C\$, .\(60\%\)\$, .\(65\%\), .\(65\%\)C, .\(65\%\)C\$, .\(65\%\)\$, .\(70\%\), .\(70\%\)C, .\(70\%\)C\$, .\(70\%\)\$, .\(75\%\), .\(75\%\)C, .\(75\%\)C\$, .\(75\%\)\$, .\(80\%\), .\(80\%\)C, .\(80\%\)C\$, .\(80\%\)\$, .\(85\%\), .\(85\%\)C, .\(85\%\)C\$, .\(85\%\)\$, .\(90\%\), .\(90\%\)C, .\(90\%\)C\$, .\(90\%\)\$, .\(95\%\), .\(95\%\)C, .\(95\%\)C\$, .\(95\%\)\$, .\(100\%\), .\(100\%\)C, .\(100\%\)C\$, .\(100\%\)\$, .w1\$ { float: left; min-height: 1px; padding: 4px; position: relative; width: 6.25%; min-height: 50px; border-radius: 8px; background-color: rgba(100, 200, 90, 0.5); background-clip: content-box; }
   .w1\$ + * { clear: left; }
